@@ -9,7 +9,7 @@
 #define lua_sandbox_interface_
 
 #include "lua.h"
-#include "lua_sandbox.h"
+#include "lsb.h"
 
 // LMW_ERR_*: Lua Message Write errors
 extern const int LMW_ERR_NO_SANDBOX_PACK;
