@@ -33,6 +33,8 @@ Bug Handling
 Features
 --------
 
+* Include the new lua_sandbox with support for shared library modules.
+
 * Allow the sandbox process_message function to set the last error string
   when it returns (#1191).
 
